# maven-annotation-plugin

./: .gitignore  CHANGELOG.md  HISTORY.md  ProjectHome.md  README.md  changelog.mustache  dependencies.html  dependency-info.html  dependency-management.html  distribution-management.html  help-mojo.html  index.html  integration.html  issue-tracking.html  license.html  licenses.html  mail-lists.html  nbactions.xml  plugin-info.html  plugin-management.html  plugins.html  pom-jdk8.xml  pom.xml  process-mojo.html  process-test-mojo.html  project-info.html  project-reports.html  project-summary.html  qa.html  scm.html  source-repository.html  summary.html  team-list.html  team.html  usage.html
.github/workflows/: deploy-jdk8.yml  deploy-pages.yml  deploy-snapshot.yaml  deploy.yml  deply-pages.yml  jdk8-deploy.yml
compiler/: pom.xml
compiler-jdk8/: pom.xml
graaljs/: pom-jdk8.xml  pom.xml
processor/: pom-jdk8.xml  pom.xml
processor/src/site/: site.xml
processor/src/site/markdown/: qa.md  usage.md
processor/src/site/resources/site2/: dependencies.html  help-mojo.html  index.html  integration.html  plugin-info.html  process-mojo.html  project-summary.html
processor/src/site/resources/utils-apidocs/: allclasses-index.html  allclasses.html  allpackages-index.html  element-list  index-all.html  index.html  member-search-index.js  package-search-index.js  type-search-index.js
processor/src/test/resources/pr45/: pom.xml
site/: distribution-management.html  license.html  plugins.html  usage.html
site2/: plugin-management.html  project-info.html  source-repository.html
site3/: dependencies.html  distribution-management.html  help-mojo.html  index.html  integration.html  issue-tracking.html  license.html  mail-lists.html  plugin-info.html  plugin-management.html  plugins.html  process-mojo.html  process-test-mojo.html  project-info.html  project-reports.html  project-summary.html  source-repository.html  team-list.html  usage.html
src/.svn/: all-wcprops  entries
src/main/.svn/: all-wcprops  entries
src/main/java/.svn/: all-wcprops  entries
src/main/java/org/.svn/: all-wcprops  entries
src/main/java/org/bsc/.svn/: all-wcprops  entries
src/main/resources/.svn/: all-wcprops  entries
src/site/: site.xml
src/site/.svn/: all-wcprops  entries
src/site/.svn/text-base/: site.xml.svn-base
src/site/apt/: usage.apt
src/site/apt/.svn/: all-wcprops  entries
src/site/resources/site2/: issue-tracking.html  mail-lists.html  process-test-mojo.html  project-reports.html  team-list.html
test/: .gitignore  README.md  pom.xml
test/app/: pom.xml
test/app/src/main/docker/: Dockerfile  settings-docker.xml
test/graaljs/: README.md  pom-jdk8.xml  pom.xml
test/processors/: pom.xml
test/processors/src/main/resources/: GeneratedClass_java.txt
test/src/main/docker/: toolchains.xml
test/src/main/resources/: ConfluenceWikiTemplate.txt
test/src/site/: .maven-processor-source-files.txt
trunk/: Makefile  Makefile.am  Makefile.dev  bootstrap  configure.in  file.conf  todo.txt
trunk/src/: binary_functor.h  clusterization.cpp  clusterization.h  comparator.cpp  comparator.h  comparer.cpp  comparer.h  default_main.cpp  file_type.h  file_typer.cpp  file_typer.h  file_types.h  filesystem.cpp  filesystem.h  functor_iterator.h  kleisli.h  logger.cpp  logger.h  magic_file.cpp  magic_file.h  main.cpp  pairing.h  program_options.cpp  program_options.h  sequence.h  type_list.h
trunk/src/file_types/: base.cpp  base.h  img.cpp  img.h  text.cpp  text.h
utils/: nbactions.xml  pom-jdk8.xml  pom.xml
utils-apidocs/: constant-values.html  deprecated-list.html  help-doc.html  overview-tree.html
utils/src/main/resources/: ConfluenceWikiTemplate.txt
(+48 files in other folders)
