AC_PREREQ([2.68])
AC_INIT([pn], [0.1], [valery.isaev@gmail.com])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CXX

AC_CHECK_HEADERS([magic.h])
AC_CHECK_LIB(magic, magic_file)

AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
