AC_INIT([pn], [0.1], [valery.isaev(at)gmail.com])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE

AC_PROG_CXX

AC_CHECK_HEADERS([magic.h])
AC_CHECK_LIB(magic, magic_file)

AC_MSG_CHECKING([if image support enabled])
AC_ARG_WITH([images],
[  --with-images           enable image support],
[ if test "x$with_images" = "xyes"; then 
     AC_MSG_RESULT([yes])
  else
     AC_DEFINE(DISABLE_IMAGES, [], [Disable image support])
     AC_MSG_RESULT([no])
  fi
], [AC_MSG_RESULT([yes])])
AM_CONDITIONAL(DISABLE_IMAGES, test "x$with_images" = "xno")

if test "x$with_images" != "xno"; then 
    AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)
    AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
    if test "x$HAVE_PKGCONFIG" = "xyes"; then
    PKG_CHECK_MODULES(ImageMagick, Magick++, [], [
        if test "x$with_images" = "xyes"; then 
            AC_MSG_ERROR($ImageMagick_PKG_ERRORS)
        else
            AC_MSG_WARN($ImageMagick_PKG_ERRORS)
        fi
    ])
    fi
fi

AC_DEFINE_UNQUOTED(FILE_CONF, "file.conf", [Configuration file name])

AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
